--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -13,10 +13,10 @@
         <div fxFlex.gt-sm="50%" fxLayout="row wrap" class="content">
           <div fxFlex="100%">
             Loại giao dịch :
-            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">RÚT TIỀN MẶT</span>
-            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">ĐÁO HẠN THẺ</span>
+            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">Cash</span>
+            <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">Advance</span>
             <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTermGetCash'"
-              >THU HỒI ĐÁO HẠN THẺ</span
+              >THU HỒI Advance</span
             >
           </div>
           <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
@@ -68,8 +68,8 @@
                   [ngModelOptions]="{ standalone: true }"
                   (change)="this.calculateFeeTransaction()"
                 >
-                  <option value="CA01">RTM thông thường</option>
-                  <option value="CA03">RTM - tiền chờ</option>
+                  <option value="CA01">Cash thông thường</option>
+                  <option value="CA03">Cash - tiền chờ</option>
                   <option value="TEST">Test thẻ</option>
                   <option value="CA02">Lô lẻ</option>
                 </select>
@@ -187,7 +187,7 @@
         align="center"
         style="color: blue; font-weight: bold"
       >
-        Lịch thực hiện đáo hạn thẻ (Tổng: {{ this.transactionInfo.requestAmount }})
+        Lịch thực hiện Advance (Tổng: {{ this.transactionInfo.requestAmount }})
       </h3>
       <div
         fxFlex="100%"
