convert link export transaction get data from frontend

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -174,7 +174,10 @@
           </mat-checkbox>
         </div>
         <div fxFlex="18%">
-          <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
+          <!-- <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
+            Export
+          </button>-->
+          <button style="margin: 5px; height: 40px" (click)="exportData()" color="primary" mat-raised-button>
             Export
           </button>
 
@@ -186,6 +189,7 @@
           >
             Export Cho đối tác
           </button>
+
           <!-- <button style="margin: 5px; height: 40px" (click)="exportAsXLSX()" color="primary" mat-raised-button>
             Tải danh sách giao dịch
           </button> -->
