fix lỗi fontawesome chỉnh từ ngữ trên UI

--- a/src/app/booking-manage/dialog/detail-booking-roll-term-schedule/detail-booking-roll-term-schedule.component.html
+++ b/src/app/booking-manage/dialog/detail-booking-roll-term-schedule/detail-booking-roll-term-schedule.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Danh sách Booking Advance [{{ bookingRefNo }}]</h1>
+<h1 mat-dialog-title>Booking tạm ứng [{{ bookingRefNo }}]</h1>
 <div mat-dialog-content>
   <table mat-table multiTemplateDataRows class="mat-elevation-z8" [dataSource]="transactions" matSort>
     <ng-container matColumnDef="bookingRefNo">
