--- a/src/app/home/customerbanner/customerbanner.component.html
+++ b/src/app/home/customerbanner/customerbanner.component.html
@@ -1,45 +1,46 @@
-<mat-card class="mat-elevation-z8" style="padding: 0px;width:100%">
-    <mat-card-content class="p-0 bannerbg" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10%">
-        <div>
+<mat-card class="mat-elevation-z8" style="padding: 0px; width: 100%">
+  <mat-card-content class="p-0 bannerbg" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10%">
+    <div>
+      <div class="sign">
+        <span class="sign__word p-l-20" style="font-size: 1rem">
+          <h1>
+            {{ "Home_Component.welcome" | translate }} <strong>{{ this.childBannerData.userName }}</strong
+            >!
+          </h1>
+        </span>
+      </div>
 
-            <div class="sign">
-                <span class="sign__word  p-l-20" style="font-size: 1rem;">
-                    <!-- <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1> -->
-                    <h1>{{'Home_Component.welcome'| translate}} <strong>Quý khách</strong>! </h1>
-                </span>
-
-            </div>
-            <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap="5%"
-                class=" p-l-20 p-t-15">
-
-                <a class="link" [routerLink]="['/clients/create']" [queryParams]="{go_back:'home'}">
-                    <i class="fas fa-user-plus"></i>&nbsp;
-                    {{'Home_Component.btnNewCustomer'| translate}}
-                </a>
-                <a class="link" [routerLink]="['/groups/create']" [queryParams]="{go_back:'home'}">
-                    <i class="fab fa-google-plus-g"></i>&nbsp;
-                    {{'Home_Component.btnNewGroup'| translate}}
-                </a>
-            </div>
-
-
-        </div>
-        <div class="sign">
-            <span class="sign__word">{{this.childBannerData.title}}:</span>
-            <span class="sign__word">Đặt cọc chỉ <strong>18 triệu đồng</strong> trước 23:30 HÔM NAY 
-                <br/>để tham gia cộng đồng POS bền vững và chuyên nghiệp nhất Việt Nam.</span>
-            <span class="sign__word">Chi tiết đặt cọc</span>
-            <span class="sign__word">
-                <ul>
-                    <li>Người nhận: Nguyễn Hoàng Anh</li>
-                    <li>Số tài khoản: ...</li>
-                    <li>Nội dung chuyển khoản: [SDT] [Họ và Tên] [Doanh số tối thiểu mỗi tháng]<br/><br/>
-                        Ví dụ: <strong>0909866615 Nguyen Hoang Anh 30T</strong></li>
-                    <li>Liên hệ phòng sản phẩm: Nguyễn Hoàng Anh - 0909.8666.15 </li>
-                </ul>
-            </span>
-            <!-- <span class="sign__word">festival</span>
+      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap="5%" class="p-l-20 p-t-15">
+        <a class="link" [routerLink]="['/clients/create']" [queryParams]="{ go_back: 'home' }">
+          <i class="fas fa-user-plus"></i>&nbsp;
+          {{ "Home_Component.btnNewCustomer" | translate }}
+        </a>
+        <a class="link" [routerLink]="['/groups/create']" [queryParams]="{ go_back: 'home' }">
+          <i class="fab fa-google-plus-g"></i>&nbsp;
+          {{ "Home_Component.btnNewGroup" | translate }}
+        </a>
+      </div>
+    </div>
+    <div class="sign">
+      <span class="sign__word">{{ this.childBannerData.title }}:</span>
+      <span class="sign__word"
+        >Đặt cọc chỉ <strong>18 triệu đồng</strong> trước 23:30 HÔM NAY <br />để tham gia cộng đồng POS bền vững và
+        chuyên nghiệp nhất Việt Nam.</span
+      >
+      <span class="sign__word">Chi tiết đặt cọc</span>
+      <span class="sign__word">
+        <ul>
+          <li>Người nhận: Nguyễn Hoàng Anh</li>
+          <li>Số tài khoản: ...</li>
+          <li>
+            Nội dung chuyển khoản: [SDT] [Họ và Tên] [Doanh số tối thiểu mỗi tháng]<br /><br />
+            Ví dụ: <strong>0909866615 Nguyen Hoang Anh 30T</strong>
+          </li>
+          <li>Liên hệ phòng sản phẩm: Nguyễn Hoàng Anh - 0909.8666.15</li>
+        </ul>
+      </span>
+      <!-- <span class="sign__word">festival</span>
       <span class="sign__word">today</span> -->
-        </div>
-    </mat-card-content>
+    </div>
+  </mat-card-content>
 </mat-card>
