--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,7 +63,7 @@
       <mat-card class="m-b-10" fxFlex="59" fxFlex.lt-md="95" tourAnchor="id6">
         <mat-card-header>
           <mat-card-title class="title">
-            <h3>Tìm thẻ để thực hiện giao dịch cho khách hàng:</h3>
+            <h3>Tim kiếm thông tin khách hàng:</h3>
           </mat-card-title>
         </mat-card-header>
 
@@ -91,7 +91,7 @@
           <mat-card-header>
             <mat-card-title class="title">
               <!-- {{'Home_Component.Card'| translate}} <strong>{{username}}</strong>! -->
-              Lịch Advance và công việc cần làm:
+              Lịch làm việc:
             </mat-card-title>
           </mat-card-header>
 
