--- a/src/app/marketing/create-booking-marketing/create-booking-marketing.component.html
+++ b/src/app/marketing/create-booking-marketing/create-booking-marketing.component.html
@@ -197,11 +197,11 @@
           </div>
         </mat-card-content>
       </mat-tab>
-      <mat-tab label="Máy POS">
+      <mat-tab label="máy bán hàng">
         <mat-card-content>
           <div fxLayout="row wrap" [formGroup]="fromGroup" fxLayoutGap="2%" cdkDropListGroup>
             <div fxFlex="44%" class="example-container">
-              <h3>Máy POS</h3>
+              <h3>máy bán hàng</h3>
               <hr/>
               <div style="margin: 12px;">
                 <input matInput placeholder="Search">
