--- a/src/app/booking-manage/view-internal-booking/roll-term-schedule-booking-tab/roll-term-schedule-booking-tab.component.html
+++ b/src/app/booking-manage/view-internal-booking/roll-term-schedule-booking-tab/roll-term-schedule-booking-tab.component.html
@@ -1,5 +1,5 @@
 <mat-card class="mat-elevation-z20 container-custom">
-  <mat-card-title align="center">MÀN HÌNH QUẢN LÝ BOOKING DỊCH VỤ Advance</mat-card-title>
+  <mat-card-title align="center">MÀN HÌNH QUẢN LÝ BOOKING TẠM ỨNG</mat-card-title>
   <mat-card-subtitle align="center" style="color: blue; font-weight: bold">
     Chi nhánh: {{ staffBookingInfo?.officeName }}
     <br />
@@ -9,14 +9,14 @@
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
       <mat-form-field fxFlex="31%">
-        <mat-label>Transaction Date From</mat-label>
+        <mat-label>Từ ngày</mat-label>
         <input matInput [matDatepicker]="transactionDateFromPicker" formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Transaction Date To</mat-label>
+        <mat-label>Đến ngày</mat-label>
         <input matInput [matDatepicker]="transactionDateToPicker" formControlName="toDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
