--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -3,9 +3,9 @@
 
   <div class="example-container " >
     <mat-form-field style="width: 100%; "  >
-      <mat-label>Tìm kiếm khách hàng lẻ thực hiện giao dịch</mat-label>
+      <mat-label>Nhập từ khóa để Tìm thông tin khách hàng</mat-label>
       <input type="text" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);"
-             placeholder="Tìm kiếm theo tên, số CMND/CCCD ,số thẻ, số điện thoại">
+             placeholder="Tìm kiếm theo tên, số CMND/CCCD , số điện thoại ...">
 
     </mat-form-field>
   </div>
