--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -16,27 +16,26 @@
         <span>Tổng giao dịch </span>
       </div>
     </div>
-   <div fxLayout="row" fxFlex="30%" class="export-item">
-        <img src="assets/images/icons/trading.svg" />
-        <div fxLayout="column">
-          <span class="money-total">{{ totalAmount | money }}</span>
-          <span>Tiền đã ứng trước</span>
-          <div fxLayout="row">
-            <button
-              mat-button
-              (click)="makeFeeOnAdvance()"
-              type="button"
-              *ngIf="batchTxnName"
-              style="background: hsl(0, 66%, 47%); color: white; max-height: 50px; width: 100%; margin-top: 8px"
-              color="warn"
-            >
-              <img src="assets/images/icons/money.svg" width="25" height="25" />&nbsp; Ứng tiền trước
-            </button>
-          </div>
+    <div fxLayout="row" fxFlex="30%" class="export-item">
+      <img src="assets/images/icons/trading.svg" />
+      <div fxLayout="column">
+        <span class="money-total">{{ totalAmount | money }}</span>
+        <span>Tiền đã ứng trước</span>
+        <div fxLayout="row">
+          <button
+            mat-button
+            (click)="makeFeeOnAdvance()"
+            type="button"
+            *ngIf="batchTxnName"
+            style="background: hsl(0, 66%, 47%); color: white; max-height: 50px; width: 100%; margin-top: 8px"
+            color="warn"
+          >
+            <img src="assets/images/icons/money.svg" width="25" height="25" />&nbsp; Ứng tiền trước
+          </button>
         </div>
-
+      </div>
     </div>
-     <!--
+    <!--
       <div fxLayout="row" fxFlex="18%" class="export-item" *midasHasActiveModule="'billModule'">
         <img src="assets/images/icons/bank.svg" />
         <div fxLayout="column">
@@ -71,11 +70,15 @@
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
       <mat-form-field fxFlex="30%">
         <mat-label>Khách hàng</mat-label>
-        <input matInput [formControl]="formFilter" (click)="this.resetAutoComplete()"
-        [matAutocomplete]="clientsAutocomplete" />
+        <input
+          matInput
+          [formControl]="formFilter"
+          (click)="this.resetAutoComplete()"
+          [matAutocomplete]="clientsAutocomplete"
+        />
       </mat-form-field>
 
-      <mat-autocomplete  #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient">
+      <mat-autocomplete #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient">
         <mat-option *ngFor="let client of filteredOptions | async" [value]="client">
           {{ displayClient(client) }}
         </mat-option>
@@ -183,7 +186,7 @@
         </ng-container>
 
         <ng-container matColumnDef="terminalId">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Máy POS</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>máy bán hàng</th>
           <td mat-cell *matCellDef="let form" [formGroup]="form">
             <mat-form-field
               style="width: 100% !important"
@@ -191,11 +194,8 @@
               *ngIf="form.contains('terminalId') && !form.contains('saved')"
               class="select-custom"
             >
-              <mat-label>Chọn máy POS</mat-label>
-              <mat-select
-                [required]="form?.data?.terminals?.length > 0"
-                formControlName="terminalId"
-              >
+              <mat-label>Chọn máy bán hàng</mat-label>
+              <mat-select [required]="form?.data?.terminals?.length > 0" formControlName="terminalId">
                 <mat-option *ngFor="let type of form?.data?.terminals" [value]="type.terminalId">
                   {{ type.terminalName }} -
                   {{ type.limitRemain | money }}
