--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -142,7 +142,7 @@
           </div>
           <div fxFlex="100%" fxLayout="row wrap">
             <div fxFlex="100%" fxLayout="row wrap" class="content">
-              <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về thu chi giao dịch</div>
+              <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về giao dịch</div>
             </div>
 
             <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
@@ -151,20 +151,20 @@
               <div fxFlex="20%">Tỉ lệ</div>
             </div>
             <div fxFlex="100%" style="color: red; font-weight: bold" fxLayout="row wrap" class="content m-l-20">
-              Thu/chi bằng tiền mặt
+              Chi tiết:
             </div>
             <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
-              <div fxFlex="40%">Thực cho khách hàng</div>
+              <div fxFlex="40%">Giá trị giao dịch</div>
               <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmount) }}</div>
               <div fxFlex="20%"></div>
             </div>
             <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
-              <div fxFlex="40%">Phí thu khách hàng</div>
+              <div fxFlex="40%">Phí</div>
               <div fxFlex="20%">{{ formatCurrency(transactionInfo.feeAmount) }}</div>
               <div fxFlex="20%">{{ transactionInfo.rate }}%</div>
             </div>
             <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
-              <div style="color: red; font-weight: bold" fxFlex="40%">Thu/chi bằng cách cấn trừ</div>
+              <div style="color: red; font-weight: bold" fxFlex="40%">Giá trị giao dịch ròng</div>
               <div fxFlex="20%">{{ formatCurrency(transactionInfo.txnAmountAfterFee) }}</div>
               <div fxFlex="20%"></div>
             </div>
@@ -179,7 +179,7 @@
         align="center"
         style="color: blue; font-weight: bold"
       >
-        Chọn máy POS để sử dụng giao dịch
+        Chọn máy bán hàng
       </h3>
       <h3
         *ngIf="transactionInfo.type == 'rollTerm' && listRollTermBooking.length > 0"
@@ -187,7 +187,7 @@
         align="center"
         style="color: blue; font-weight: bold"
       >
-        Lịch thực hiện Advance (Tổng: {{ this.transactionInfo.requestAmount }})
+        Lịch thực hiện (Tổng: {{ this.transactionInfo.requestAmount }})
       </h3>
       <div
         fxFlex="100%"
@@ -268,7 +268,7 @@
         <div fxFlex.gt-sm="28%" fxLayout="row wrap" class="content">
           <div fxFlex="100%">
             <mat-form-field style="width: 100%" appearance="fill">
-              <mat-label>Chọn máy POS làm giao dịch</mat-label>
+              <mat-label>Chọn máy bán hàng</mat-label>
               <select
                 (change)="this.getFeeByTerminal()"
                 [(ngModel)]="transactionInfo.terminalId"
@@ -276,7 +276,7 @@
                 matNativeControl
               >
                 <option *ngFor="let terminal of transactionInfo.listTerminal" [value]="terminal.terminalId">
-                  {{ terminal.terminalName }} - Hạn mức khả dụng: {{ terminal.limitRemain | money }}
+                  {{ terminal.terminalName }} - Còn lại: {{ terminal.limitRemain | money }}
                 </option>
               </select>
             </mat-form-field>
@@ -286,7 +286,7 @@
         <div fxFlex.gt-sm="15%" fxLayout="row wrap" class="content" *midasHasActiveModule="'billModule'">
           <div fxFlex="100%">
             <mat-form-field>
-              <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
+              <mat-label>Giá trị giao dịch đề xuất(VNĐ)</mat-label>
               <input readonly matInput formControlName="txnAmount" />
               <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
@@ -295,7 +295,7 @@
         <div fxFlex.gt-sm="15%" fxLayout="row wrap" class="content">
           <div fxFlex="100%">
             <mat-form-field>
-              <mat-label>Số tiền trên bill do POS in ra</mat-label>
+              <mat-label>Giá trị giao dịch thực tế</mat-label>
               <input
                 matInput
                 #amountPosBill
