--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -2,14 +2,14 @@
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
       <mat-form-field fxFlex="31%">
-        <mat-label>Transaction Date From</mat-label>
+        <mat-label>Từ ngày:</mat-label>
         <input matInput [matDatepicker]="transactionDateFromPicker" formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Transaction Date To</mat-label>
+        <mat-label>Đến ngày:</mat-label>
         <input matInput [matDatepicker]="transactionDateToPicker" formControlName="toDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
@@ -77,7 +77,7 @@
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{
               transactionsData?.totalRollTermAnalyticsRespone?.totalFeePaid | money
             }}</span>
-            <span>&nbsp;Tổng đã chi</span>
+            <span>&nbsp;Tổng tạm ứng</span>
           </div>
         </div>
         <div fxLayout="row wrap" fxFlex="16%" class="container m-b-20">
@@ -87,7 +87,7 @@
               transactionsData?.totalRollTermAnalyticsRespone?.totalPrincipal -
                 transactionsData?.totalRollTermAnalyticsRespone?.totalFeePaid | money
             }}</span>
-            <span>&nbsp; Tổng Advance còn lại</span>
+            <span>&nbsp; Tổng công nợ còn lại</span>
           </div>
         </div>
         <div fxLayout="row wrap" fxFlex="16%" class="container m-b-20">
@@ -170,7 +170,7 @@
 
       <ng-container matColumnDef="requestAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Số tiền Advance <br />
+          Số tiền Tạm ứng <br />
           (a)
         </th>
         <td mat-cell *matCellDef="let journalEntry">{{ journalEntry?.principal | money }}</td>
@@ -178,7 +178,7 @@
 
       <ng-container matColumnDef="paidAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="on_hold">
-          Đã chi <br />
+          Đã tạm ứng <br />
           (b)
         </th>
         <td class="on_hold" mat-cell style="padding: 6px" *matCellDef="let journalEntry">
@@ -188,7 +188,7 @@
 
       <ng-container matColumnDef="remainAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>
-          Còn phải Advance <br />
+          Còn phải Tạm ứng <br />
           (c) = (a) - (b)
         </th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
@@ -209,7 +209,7 @@
       <ng-container matColumnDef="waitGetAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header class="on_hold">
           Cần thu hồi <br />
-          (d)
+          (e) = (b) - (d)
         </th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry" class="on_hold">
           {{ journalEntry.paidAmount - journalEntry.amountPaid | money }}
@@ -265,19 +265,19 @@
               <div><span style="font-weight: bold"> Chi nhánh :</span>&nbsp; &nbsp;{{ element.officeName }}</div>
               <div>
                 <span style="font-weight: bold">
-                  Số tiền Advance <br />
+                  Số tiền Tạm ứng <br />
                   (a) :</span
                 >&nbsp; &nbsp;{{ element?.principal }}
               </div>
               <div>
                 <span style="font-weight: bold">
-                  Đã chi <br />
+                  Đã tạm ứng <br />
                   (b) :</span
                 >&nbsp; &nbsp;{{ element?.paidAmount | money }}
               </div>
               <div>
                 <span style="font-weight: bold">
-                  Còn phải Advance <br />
+                  Còn phải Tạm ứng <br />
                   (c) = (a) - (b) :</span
                 >&nbsp; &nbsp;{{ element?.principal - element?.paidAmount | money }}
               </div>
@@ -290,7 +290,7 @@
               <div>
                 <span style="font-weight: bold">
                   Cần thu hồi <br />
-                  (d) (b) :</span
+                  (e)=(b) - (d) :</span
                 >&nbsp; &nbsp;{{ element.paidAmount - element.amountPaid | money }}
               </div>
             </div>
@@ -325,15 +325,15 @@
       style="width: 50px"
     >
       <button (click)="showRollTermScheduleDialog(refid)" mat-menu-item>
-        <img src="assets/images/icons/add.svg" />&nbsp;Lịch Advance
+        <img src="assets/images/icons/add.svg" />&nbsp;Lịch Tạm ứung
       </button>
       <button mat-menu-item (click)="executeLoanManualDialog(refid)">
-        <img src="assets/images/icons/order.svg" />&nbsp;Xử lý Advance
+        <img src="assets/images/icons/order.svg" />&nbsp;Xử lý Tạm ứng
       </button>
 
       <hr />
       <button mat-menu-item (click)="undoRollTermTransaction(refid, principal - paidAmount)">
-        <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Hủy Advance
+        <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Hủy Tạm ứng
       </button>
     </ng-template>
   </mat-menu>
