--- a/src/app/transactions/rollTerm-schedule-transaction/rollTerm-schedule-transaction.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/rollTerm-schedule-transaction.component.html
@@ -1,13 +1,13 @@
 <mat-card class="mat-elevation-z20 container-custom">
   <mat-tab-group (selectedTabChange)="changeTabTransaction($event)">
-    <mat-tab label="Đang thực hiện Advance">
+    <mat-tab label="Quản lý chi tiết công nợ">
       <midas-roll-term-schedule-tab></midas-roll-term-schedule-tab>
     </mat-tab>
-    <mat-tab label="Đến hạn chưa xử lý">
+    <!-- <mat-tab label="Đến hạn chưa xử lý">
       <midas-due-day-card-transaction></midas-due-day-card-transaction>
     </mat-tab>
     <mat-tab label="Chờ lên lịch Advance">
       <midas-on-roll-term-card-tab></midas-on-roll-term-card-tab>
-    </mat-tab>
+    </mat-tab> -->
   </mat-tab-group>
 </mat-card>
