--- a/src/app/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/transactions/view-transaction/view-transaction.component.html
@@ -12,8 +12,8 @@
       <div fxFlex.gt-sm="50%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
           Loại giao dịch :
-          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">Cash</span>
-          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">Advance</span>
+          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'cash'">Giao dịch thường</span>
+          <span style="color: green; font-weight: bold" *ngIf="transactionInfo.type == 'rollTerm'">Giao dịch Advance</span>
         </div>
         <div fxFlex="100%" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column">
           <div fxFlex.gt-sm="30%">Thẻ thực hiện giao dịch</div>
@@ -40,7 +40,7 @@
         >
           <div fxFlex.gt-sm="50%">
             <mat-form-field appearance="fill">
-              <mat-label>Tài khoản nhận tiền</mat-label>
+              <mat-label>Tài khoản thanh toán</mat-label>
               <input
                 style="color: blue; font-weight: bold"
                 matNativeControl
@@ -58,7 +58,7 @@
                 [(ngModel)]="transactionInfo.productId"
                 disabled
               >
-                <option value="CA01">Cash thông thường</option>
+                <option value="CA01">Giao dịch thường</option>
                 <option value="TEST">Test thẻ</option>
                 <option value="CA02">Lô lẻ</option>
               </select>
@@ -115,7 +115,7 @@
         </div>
         <div fxFlex="100%" fxLayout="row wrap">
           <div fxFlex="100%" fxLayout="row wrap" class="content">
-            <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về thu chi giao dịch</div>
+            <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về thu chi </div>
           </div>
 
           <div fxFlex="100%" fxLayout="row wrap" class="content m-l-20">
@@ -127,12 +127,12 @@
             Thu/chi bằng tiền mặt
           </div>
           <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
-            <div fxFlex="40%">Thực cho khách hàng</div>
+            <div fxFlex="40%">Giá trị giao dịch ròng</div>
             <div fxFlex="20%">{{ formatCurrency(transactionInfo.terminalAmount) }}</div>
             <div fxFlex="20%"></div>
           </div>
           <div class="m-l-10" fxFlex="100%" fxLayout="row wrap" class="m-l-20 content">
-            <div fxFlex="40%">Phí thu khách hàng</div>
+            <div fxFlex="40%">Phí </div>
             <div fxFlex="20%">{{ formatCurrency(transactionInfo.feeAmount) }}</div>
             <div fxFlex="20%">{{ transactionInfo.feeRate }}%</div>
           </div>
@@ -147,13 +147,13 @@
     </div>
   </mat-card>
   <mat-card fxLayout="row wrap" class="m-0">
-    <h3 fxFlex align="center" style="color: blue; font-weight: bold">Chọn máy POS để sử dụng giao dịch</h3>
+    <h3 fxFlex align="center" style="color: blue; font-weight: bold">Chọn máy bán hàng</h3>
 
     <div fxFlex="100%" fxLayout.sm="column" fxLayout.xs="column">
       <div fxFlex.gt-sm="30%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
           <mat-form-field style="width: 80%" appearance="fill">
-            <mat-label>Máy POS làm giao dịch</mat-label>
+            <mat-label>Máy bán hàng </mat-label>
             <input disabled [(ngModel)]="transactionInfo.terminalName" matNativeControl />
           </mat-form-field>
         </div>
@@ -161,7 +161,7 @@
       <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
           <mat-form-field>
-            <mat-label>Số tiền cần quẹt(VNĐ)</mat-label>
+            <mat-label>Số tiền cần giao dịch (VNĐ)</mat-label>
             <input disabled matInput [ngModel]="transactionInfo.invoiceAmount" />
           </mat-form-field>
         </div>
@@ -169,7 +169,7 @@
       <div fxFlex.gt-sm="16%" fxLayout="row wrap" class="content">
         <div fxFlex="100%">
           <mat-form-field>
-            <mat-label>Số tiền trên bill do POS in ra</mat-label>
+            <mat-label>Số tiền giao dịch thực tế (VND)</mat-label>
             <input matInput #amountPosBill [ngModel]="transactionInfo.terminalAmount" disabled />
           </mat-form-field>
         </div>
